welcome.lessons.welcome.instructions.InstructionsDrawG.scala.error
Source:18: error: not found: value haut
haut()
^Source:19: error: not found: value haut
haut()
^Source:27: error: not found: value bas
bas()
^Source:28: error: not found: value bas
bas()
^Source:35: error: not found: value haut
haut()
^Source:36: error: not found: value haut
haut()
^Source:37: error: not found: value haut
haut()
^Source:38: error: not found: value haut
haut()
^