welcome.lessons.welcome.instructions.InstructionsDrawG.scala.code
baisseBrosse()

gauche()
gauche()
gauche()
gauche() //Fin de barre du haut

recule()
recule()
recule()
recule()

droite()
droite()
droite()
droite()

haut()
haut()

gauche()

leveBrosse()

droite()

bas()
bas()

gauche()
gauche()
gauche()
gauche()

haut()
haut()
haut()
haut()

droite()
droite()
droite()
droite()